juno/qa/apps/wrapper-next/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrapper-next
  annotations:
    secret.reloader.stakater.com/reload: "arranger-keycloak-credentials"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wrapper-next
  template:
    metadata:
      labels:
        app: wrapper-next
    spec:
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-api-arranger:2.0.3 # {"$imagepolicy": "cqdg-qa-fluxcd:arranger"}
        imagePullPolicy: Always
        name: wrapper-next
        volumeMounts:
        - name: opensearch-ca-cert
          mountPath: /opt/opensearch-ca
          readOnly: true
        - name: ca-bundle
          mountPath: /opt/ca-bundle
          readOnly: true
        resources:
          requests:
            memory: "2048Mi"
            cpu: '2'
          limits:
            memory: "4096Mi"
            cpu: '2'
