juno/qa/apps/wrapper-next/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wrapper-next
  name: wrapper-next
spec:
  ports:
    - port: 5050
      protocol: TCP
      targetPort: 5050
  selector:
    app: wrapper-next
