juno/qa/apps/wrapper-next/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrapper-next
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - data-api-next.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: data-api-next.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wrapper-next
                port:
                  number: 5050
